# hp-news

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt  smoke_test.py
app/: config.py  db.py  http_api.py  ingestor.py  logging_setup.py  main.py  mcp_stdio.py  models.py  ranking.py  scheduler.py  service.py  sources.py  utils.py
app/fetchers/: gdelt.py  google_news.py  rss_fetcher.py
deploy/systemd/: homepilot-news-mcp.service
scripts/: run_http.sh  run_mcp.sh
tests/: conftest.py  test_db.py  test_http_api.py  test_mcp_stdio.py  test_ranking.py  test_service.py
