[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "homepilot-news-mcp"
version = "0.1.0"
requires-python = ">=3.11,<3.14"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.6",
    "pydantic==2.8.2",
    "python-dotenv==1.0.1",
    "feedparser==6.0.11",
    "requests==2.32.3",
    "tenacity==8.5.0",
    "python-dateutil==2.9.0.post0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "httpx>=0.24",
    "pytest-asyncio>=0.21",
]

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["tests*", "scripts*", "deploy*"]
